<resources>
    <string name="app_name">Temi Attend</string>

    <string name="label_welcome_title">Welcome to Schaeffler!</string>
    <string name="label_welcome_subtitle">Check in as</string>

    <string name="label_login_instruction">Enter your Schaeffler ID</string>

    <string name="label_temperature_instruction">Recording your temperature</string>
    <string name="label_temperature">%.2f℃</string>
    <string name="label_user">Hello, </string>

    <string name="label_normal_end_title">Thank You!</string>
    <string name="label_normal_end_subtitle">Please also check in through the SafeEntry</string>

    <string name="label_end_title">Sorry!</string>
    <string name="label_bad_end_instruction">
        You are not allowed to enter the office.\n
        Kindly wait for a few minutes to cool down and try again
    </string>
    <string name="label_bad_end_chance">Remaining Chance: %d</string>
    <string name="label_strict_end_instruction">
        Unfortunately, your temperature remains high.\n
        For safety purpose, kindly leave the office now.
    </string>

    <string name="label_attendances_title">Attendances</string>

    <string name="label_camera_details">Thermal Camera Details</string>
    <string name="label_ip">IP</string>
    <string name="label_mac">MAC</string>
    <string name="label_battery">Battery</string>
    <string name="label_wifi">WIFI SSID</string>
    <string name="label_version">Version</string>

    <string name="label_configure">Configure Camera</string>
    <string name="label_configure_instruction">
        • Turn the camera on\n• Press the RESET button on the camera\'s bottom side\n• Connect Wi-Fi to OGAWA-IR
    </string>

    <string name="label_connecting_camera">Connecting camera to WIFI</string>
    <string name="label_request_wifi">Please connect tēmi to the same WIFI network</string>

    <string name="label_fetching_camera_distribution">Fetching camera\'s network distribution info</string>
    <string name="label_fetching_success">Successfully retrieved camera details!</string>
    <string name="label_fetching_failed">Failed to retrieve camera details!</string>

    <string name="label_password_mixed_case">Password must consist of both uppercase and lowercase</string>
    <string name="label_password_length">Password must be at least %d characters long</string>

    <string name="label_office_location">Office Location</string>
    <string name="label_office_location_desc">Which office the attendances should be registered</string>

    <string name="label_visitor_registration_title">External Visitor Travel Declaration Form</string>
    <string name="label_details">Details</string>
    <string name="label_declaration">Declaration</string>
    <string name="label_date_visit">Date of Visit (Arrival at Schaeffler Site)</string>
    <string name="label_declaration_travel">
        I have NOT recently travelled from abroad in the last 15 days (before date of your visit to Schaeffler).
    </string>
    <string name="label_travel_start">Start of travel</string>
    <string name="label_travel_end">End of travel</string>
    <string name="label_declaration_fever_symptom">
        I do NOT have fever or other symptoms (e.g. dry cough, body aches, headache, sore throat, runny nose,
        tiredness, shortness of breath.
    </string>
    <string name="label_declaration_contact_traveller">
        I have NOT been in contact with someone (examples: family member, member of the same household,
        close friend, etc.) who has travelled abroad in the last 15 days (before the date of your visit to 
        Schaeffler).
    </string>
    <string name="label_declaration_contact_confirmed">
        I have NOT been in contact with a person with a confirmed COVID-19 infection.
    </string>
    <string name="label_declaration_contact_suspected">
        I have NOT been in contact with a person with a suspected COVID-19 infection.
    </string>
    <string name="label_declaration_contact_quarantine">
        I have NOT been in contact with a person placed under quarantine/stay-home notice (SHN) or who has been
        recently released from quarantine/SHN.
    </string>

    <string name="label_item_travel">Travelled abroad in the last 15 days</string>
    <string name="label_item_travel_start">From: </string>
    <string name="label_item_travel_end">To: </string>
    <string name="label_item_fever">Have fever or related symptoms</string>
    <string name="label_item_contact_traveller">In contact with someone who travelled abroad in the last 15 days</string>
    <string name="label_item_contact_confirmed">In contact with confirmed COVID-19 case</string>
    <string name="label_item_contact_suspected">In contact with suspected COVID-19 case</string>
    <string name="label_item_contact_quarantine">In contact with someone in quarantine or SHN</string>

    <string name="hint_visitor_name">Name of Visitor</string>
    <string name="hint_company">Company</string>
    <string name="hint_contact">Contact Number (Business/Mobile Phone)</string>
    <string name="hint_host">Person Visiting at Schaeffler (Host)</string>

    <string name="hint_manual_employee">Schaeffler ID</string>
    <string name="hint_wifi_ssid">WIFI SSID</string>
    <string name="hint_wifi_pwd">Password</string>

    <string name="hint_old_password">Old Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Repeat Password</string>
    <string name="hint_new_password">New Password</string>

    <string name="hint_search">Search Name</string>

    <string name="button_employee">Employee</string>
    <string name="button_guest">Guest</string>
    <string name="button_face_recognize">Recognize me</string>
    <string name="button_manual">Manual entry</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_my_attendance">My Attendance</string>
    <string name="button_reset">Reset</string>
    <string name="button_retry">Retry</string>
    <string name="button_connect">Connect Camera</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_view_visitors">Visitors</string>
    <string name="button_view_attendances">All Attendances</string>
    <string name="button_choose">Choose</string>
    <string name="button_submit">Submit</string>

    <string name="switch_attendance_on">Abnormal only</string>
    <string name="switch_attendance_off">All attendances</string>

    <string name="content_desc_mask">This icon shows because you are not wearing a mask! Please
    wear your mask properly</string>
    <string name="content_desc_setting">Settings icon. Click to access settings.</string>
    <string name="content_desc_qr_code">SafeEntry QR code. Please scan this with your phone before entering office.</string>
    <string name="content_desc_ic_calendar">Calendar icon.</string>
    <string name="content_desc_ic_thermometer">Thermometer icon.</string>
    <string name="content_desc_ic_location">Location icon.</string>
    <string name="content_desc_thermal_image">Thermal image from the thermal camera.</string>
    <string name="content_desc_ic_person">Person icon.</string>
    <string name="content_desc_ic_enterprise">Company icon.</string>
    <string name="content_desc_ic_phone">Contact number icon.</string>

    <string name="snack_bar_error">Encountered error: %s</string>
    <string name="snack_bar_new_face">New face detected! Your face will be saved once you confirmed your id.</string>
    <string name="snack_bar_no_face">No face detected, unable to recognize!</string>
    <string name="snack_bar_wrong_wifi">You are not connected to the WiFi %s!</string>
    <string name="snack_bar_socket_error">Socket connection error: %s!</string>
    <string name="snack_bar_camera_not_ready">Sorry! Thermal camera is not working right now</string>
    <string name="unknown_error">Unknown error!</string>

    <string name="snack_bar_travel_date_required">Please fill both start and end of your travel date.</string>

    <!-- Camera related strings -->
    <string name="camera_overlay_text">Tap the screen when your face is visible</string>
    <string name="camera_overlay_button">Close Camera</string>

    <!-- Schaeffler ID error -->
    <string name="error_blank">Please input your Schaeffler ID!</string>
    <string name="error_non_alphabet">Schaeffler ID cannot contain numbers or special characters!</string>
    <string name="error_ssid_blank">Please choose an SSID!</string>

    <string name="error_repeat_password_different">Confirmation password must be the same as the password.</string>
    <string name="error_weak_password">Password must meet the given criteria.</string>
    <string name="error_wrong_password">Wrong password.</string>

    <string name="error_required">*Required</string>

    <!-- Preferences -->
    <string name="settings_location">Office Location</string>
    <string name="summary_location">Which office the attendance is taken</string>
    <string-array name="locations">
        <item>18 Tai Seng</item>
        <item>Aerospace</item>
        <item>SHARE@NTU</item>
    </string-array>

    <!-- Temi TTS -->
    <string name="tts_mask_not_detected">Please wear your mask properly</string>
    <string name="tts_user_too_close">Please move back a little bit</string>
    <string name="tts_user_too_far">Please come closer</string>
    <string name="tts_normal_temp">%.2f degree celcius normal temperature</string>
    <string name="tts_abnormal_temp">%.2f degree celcius abnormal temperature</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>